Fix horizontal scroll

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   background-color: $color-background-dark;
-  width: 100vw;
+  width: 100%;
   &__up {
     position: relative;
     height: 45px;
