--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -6,7 +6,7 @@
   // background-repeat: no-repeat;
   background-position: center;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -71,7 +71,7 @@
       margin-bottom: 13px;
     }
     .arrow {
-      width: 20px;
+      // width: 20px;
       margin: 18px 0 0 12px;
     }
   }
