--- a/src/scss/layout/_section2.scss
+++ b/src/scss/layout/_section2.scss
@@ -1,6 +1,6 @@
 // Section2
 .section2 {
-  width: 100vw;
+  width: 100%;
   background-color: $color-background-light;
   .grid_wrapper {
     display: grid;
